2008-08-07  Doug Evans  <dje@google.com>

	* tclconfig/tcl.m4 (TEA_CONFIG_CFLAGS): Remove extranous single quote.
	Fix quoting of arg to awk.
	(TEA_BLOCKING_STYLE): Ditto.

=-=-=-=-=-=-=-=-=-=-= BEGIN IWIDGETS 4.0.1 CHANGES =-=-=-=-=-=-=-=-=-=-=-
2002-09-09  Chad Smith  <csmith@adc.com>
    * Makefile.in: SF ticket 227921
	Updated man page installation such that "iwidgets_" is now
	prepended to the man page filename.  This is done to avoid
	naming conflicts with man pages in other extensions.

2002-09-09  Chad Smith  <csmith@adc.com>
    * generic/scrolledtext.itk
    * doc/scrolledtext.n
    * doc/scrolledhtml.n
    * demos/html/scrolledtext.n.html
    * demos/html/scrolledhtml.n.html
    * tests/scrolledtext.test
    * tests/scrolledhtml.test
        SF ticket 532602: added -tabs to scrolledtext (and
	scrolledhtml due to inheritance)

2002-09-08  Marty Backe <marty@lucidway.org>
    * generic/combobox.itk
        Fixed SF bug 501300 - keyboard navigation was not working
        properly if any items were null

2002-09-06  Chad Smith  <csmith@adc.com>
    * generic/hierarchy.itk: SF ticket 596111
	After reconfiguring -querycommand, the text component
	lost its tag configuration.  Added code to reset
	the hilite, lowlite, and info tags.

2002-09-05  Chad Smith  <csmith@adc.com>
    * generic/hierarchy.itk: SF ticket 600941
	Marked node lost its highlighting when parent folder
	closed and reopened

2002-09-05  Chad Smith  <csmith@adc.com>
    * generic/canvasprintbox.itk: SF ticket 560153
	Wouldn't print to a filename other than "canvas.ps".

2002-09-05  Chad Smith  <csmith@adc.com>
    * generic/tabnotebook.itk: SF ticket 514222
	Patch added for infinite loop problem introduced by
	new -padx and -pady Tk frame widget options in 8.4

2002-09-05  Chad Smith  <csmith@adc.com>
    * generic/tabnotebook.itk: SF ticket 603823
	Patch for bugs related to the -int option
    * generic/calendar.itk: SF ticket 603823
	Found bug while testing the dateentry patch.  Several