@@ -1,3 +1,7 @@
+2012-03-23  Keith Seitz  <keiths@redhat.com>
+
+	* iwidgets.tcl.in: Add source directories to the auto_path.
+
 2008-08-07  Doug Evans  <dje@google.com>
 
 	* tclconfig/tcl.m4 (TEA_CONFIG_CFLAGS): Remove extranous single quote.
